@@ -42,4 +42,33 @@ config SAMA5_NOR_START
 		option:  If SAMA5_NOR_START is defined, then it will not wait but
 		will, instead, immediately start the program in NOR FLASH.
 
+config SAMA5_AT25_AUTOMOUNT
+	bool "AT25 auto-mount"
+	default n
+	depends on NSH_ARCHINIT && SAMA5_SPI0 && MTD_AT25
+	---help---
+		Automatically initialize the AT25 SPI FLASH driver when NSH starts.
+
+choice
+	prompt "AT25 configuration"
+	default SAMA5_AT25_FTL
+	depends on SAMA5_AT25_AUTOMOUNT
+
+config SAMA5_AT25_FTL
+	bool "Create AT25 block driver"
+	---help---
+		Create the MTD driver for the AT25 and "wrap" the AT25 is a standard
+		block driver that could then, for example, be mounted using FAT or
+		any other file system.  Any file system may be used, but there will
+		be no wear-leveling.
+
+config SAMA5_AT25_NXFFS
+	bool "Create AT25 NXFFS file system"
+	depends on FS_NXFFS
+	---help---
+		Create the MTD driver for the AT25 and and mount the AT25 device as
+		a wear-leveling, NuttX FLASH file system (NXFFS).  The downside of
+		NXFFS is that it can be very slow.
+
+endchoice
 endif
