@@ -101,14 +101,6 @@ config AT25_SPIFREQUENCY
 	int "AT25 SPI Frequency"
 	default 20000000
 
-config AT25_READONLY
-	bool "AT25 Read-Only FLASH"
-	default n
-
-config AT25_SECTOR512
-	bool "Simulate 512 byte Erase Blocks"
-	default n
-
 endif
 
 config MTD_AT45DB
